[package]
name = "rsbup"
version = "0.1.0"
authors = ["Trung Pham <i.am@tru.ng>"]
description = "Rust local/cloud backup program, supporting compression, encryption, and deduplication."
license = "BSD-3-Clause"
repository = "https://github.com/pbtrung/rsbup"
keywords = ["cloud-storage", "deduplication", "compression", "encryption"]
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
appveyor = { repository = "pbtrung/rsbup", branch = "master" }
travis-ci = { repository = "pbtrung/rsbup", branch = "master" }

[build-dependencies]
gcc = "*"

[dependencies]
libc = "0.2"
rand = "0.4"
reqwest = "0.8"
hc256 = "*"
zstd = "0.4"
threadpool = "1"
walkdir = "2"
slog = "2"
slog-async = "2"
slog-term = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
bs58 = "*"
clap = "2"
toml = "0.4"
time = "0.1"
argon2rs = { git = "https://github.com/bryant/argon2rs" }
bounded-spsc-queue = "0.2"
num_cpus = "1"
rusqlite =  { git = "https://github.com/gwenn/rusqlite", branch = "3.22.0", features = ["bundled"] }
regex = "0.2"